resuelto bug log

--- a/app/views/licencias_logs/index.html.erb
+++ b/app/views/licencias_logs/index.html.erb
@@ -17,7 +17,7 @@
 <% @licencias_logs.each do |log| %>
   <tr>
     <td><%= get_cliente_if_exists log %></td>
-    <td><%= log.licencia.serial %></td>
+    <td><%= get_licencia_if_exists log %></td>
     <td><%= log.created_at.to_formatted_s(:db) %></td>
     <td><%= log.ip %></td>
     <td><%= log.referencias %></td>
